syntax= "proto3";

package greet;

option java_package = "com.dummy.grcp.greeting.protofilesgreet";
option java_multiple_files = true;

message Greeting {
	string firstName = 1;
	string lastName = 2;
}

message GreetRequest{
	Greeting greeting = 1;
}

message GreetResponse {
	string result = 1;
}

message GreetManyTimesRequest{
	Greeting greeting = 1;
}

message GreetManyTimesResponse{
	string result = 1;
}

message LongGreetRequest{
	Greeting greeting = 1;
}

message LongGreetResponse{
	string result = 1;
}

message GreetEveryoneRequest{
	Greeting greeting = 1;
}

message GreetEveryoneResponse{
	string result = 1;
}

message TestGreetRequest{
	int32 number = 1;
}

message TestGreetResponse{
	int32 number = 1;
}

message GreetDeadlineRequest{
	Greeting greeting = 1;
}

message GreetDeadlineResponse{
	string result = 1;
}

service GreetService{
	//Unary
	rpc Greet(GreetRequest) returns (GreetResponse){};

	//Server streaming
	rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse){}

	//client streaming
	rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){}

	//bidireccional streaming
	rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse){}

	//bidirectional closed by one before stops naturally
	rpc GreetTest(stream TestGreetRequest) returns (stream TestGreetResponse){}

	//deadline deadline 300ms
	rpc GreetDeadline(GreetDeadlineRequest) returns(GreetDeadlineResponse){}
}